Fix regression with character strike name not wrapping (#15477)

--- a/src/styles/actor/character/_actions.scss
+++ b/src/styles/actor/character/_actions.scss
@@ -80,19 +80,16 @@
                 grid-area: "img";
                 width: 2rem;
                 height: 2rem;
-                margin-top: var(--space-4);
+                margin-top: var(--space-2);
             }
 
-            .item-name {
+            h4.name {
                 align-items: baseline;
                 display: flex;
                 width: 100%;
                 gap: var(--space-4);
-
-                h4 {
-                    margin: 0;
-                    flex: 0 0 auto;
-                }
+                margin: 0;
+                line-height: 1;
 
                 // Elemental blasts
                 .item-controls {
@@ -107,7 +104,7 @@
                 flex-wrap: nowrap;
                 font-size: var(--font-size-14);
                 margin-bottom: 0;
-                padding: 2px 0;
+                padding: var(--space-2) 0;
 
                 button {
                     border: none;
@@ -179,6 +176,7 @@
             .auxiliary-actions {
                 display: flex;
                 gap: 3px;
+                padding: var(--space-2) 0;
 
                 button {
                     // Modular damage select menu
